--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".search.SearchActivity">
+    tools:context=".search.SearchActivity"
+    android:background="@color/md_grey_200">
 
     <EditText
         android:id="@+id/searchEditText"
@@ -14,12 +15,23 @@
         android:paddingRight="25dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+        android:background="@color/md_white_1000"
         android:hint="Type here to search..."
         android:inputType="textNoSuggestions"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"/>
+        app:layout_constraintBottom_toTopOf="@+id/separatorView"/>
+
+    <View
+        android:id="@+id/separatorView"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/md_black_1000"
+        app:layout_constraintTop_toBottomOf="@id/searchEditText"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -27,7 +39,7 @@
         android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchEditText"
+        app:layout_constraintTop_toBottomOf="@id/separatorView"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ProgressBar
