--- a/app/src/main/res/layout/details_activity.xml
+++ b/app/src/main/res/layout/details_activity.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@id/loginTextView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="Followers count: 256"
+        android:text="@string/followers_basic_text"
         android:textSize="16dp"
         android:layout_marginTop="10dp"
         android:textColor="@color/md_black_1000"/>
